# pnq

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  api.md  asdfas.py  index.html  mkdocs.yml  pyproject.toml  reflect.py  setup.cfg  sitemap.xml
.github/workflows/: github_pages.yml  test.yml
advanced/: index.html
advanced_usage/: index.html
api/: index.html
async/: index.html
class/: index.html
code_of_conduct/: index.html
compatibility/: index.html
contributing/: index.html
datasource/: index.html
docs/: advanced_usage.md  api.md  class.md  datasource.md  exceptions.md  index.md  naming.md  performance.md  quick_start.md  research.md
docs/css/: custom.css
environment_variables/: index.html
exceptions/: index.html
http2/: index.html
naming/: index.html
performance/: index.html
pnq/: __getter.py  __init__.py  __queries__.py  __template__.py  __types.py  actions.py  actions_core.py  buildins.py  commons.py  core.py  exceptions.py  generators.py  getter.py  inspect.py  interfaces.py  io.py  main.py  model.py  models.py  op.py  protocol.py  protocols.py  queries.py  reflectors.py  types.py
pnq/__base/: actions.py  builder.py  core.py  queries.py  requests.py
pnq/_itertools/: __init__.py  actions.py  builder.py  common.py  core.py  finalizers.py  generate_unasync.py  io.py  protocols.py  querables.py  queryables.py  requests.py
pnq/_itertools/_async/: __init__.py  concurrent.py  finalizers.py  io.py  queries.py
pnq/_itertools/_sync/: concurrent.py  finalizers.py  io.py  queries.py
pnq/_itertools/_sync_generate/: __init__.py  concurrent.py  finalizers.py  io.py  queries.py
pnq/_selectors/: __init__.py
pnq/aio/: __init__.py
pnq/base/: __init__.py  actions.py  builder.py  converters.py  core.py  exceptions.py  finalizers.py  op.py  queries.py  requests.py
pnq/concurrent/: __init__.py  executors.py  iterable_functions.py  iterables.py  protocols.py  testtool.py  tools.py
pnq/ds/: __init__.py  docker.py  filesystem.py  k8s.py  logger.py  schedule.py  types.py
pnq/operators/: __init__.py
pnq/selectors/: __init__.py
pnq/types/: __init__.py  models.py  protocols.py  utils.py
pnq_template/: generate.py  template.py  template.pyi
print_page/: index.html
quick_start/: index.html
quickstart/: index.html
research/: index.html
search/: search_index.json
tests/: __signal_test  __test_lazy.py  conftest.py  test_10_base.py  test_20_queries.py  test_30_async.py  test_buildin.py  test_exceptions.py  test_mypy.py  test_playground.py  test_pnq.py  test_queries.py  test_types.py  test_v2.py
tests/00/: test_concurrent.py  test_operators.py  test_selectors.py  test_types.py
tests/10/: __signal_test  test_10_base.py  test_20_queries.py
tests/50/: test_concurrent.py  test_parallel.py  test_request.py
tests/90/: test_ds.py  test_io.py
tests/99/: test_document.py
tests/mypy/: __init__.py  result.txt
tests/test_00_no_dep/: test_concurrent.py  test_selectors.py  test_types.py
tests/test_00_no_dependency/: test_types.py
tests/test_90_io/: test_io.py
third_party_packages/: index.html
troubleshooting/: index.html
