[tool.poetry]
name = "pnq"
version = "0.0.19"
description = ""
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sasano8/pnq"

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "Framework :: AsyncIO"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.21.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

black = "^22.6.0"
flake8 = "^5.0.3"
mypy = "^0.971"
isort = "^5.10.1"

mkdocs = "^1.3.1"
mkautodoc = "^0.1.0"
mkdocs-material = "^8.3.9"
pymdown-extensions = "^9.5"
mkdocs-print-site-plugin = "^2.3.4"

Jinja2 = "^3.1.2"
unasync = "^0.5.0"
requests = "^2.28.1"
requests-unixsocket = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
extend-exclude = '''
^/pnq/__queries__.py|
^/pnq/actions.py
'''

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = [
  "tests",
]
